# worldcovers

./: .env  .env.example  .envrc  .gitignore  .pylintrc  CHANGELOG.md  Pipfile  README.md  backend.plan  frontend.plan  manage.py  package-lock.json  postmarks-removal.plan  pyproject.toml  requirements.txt  run.sh  woco  woco_cli.py
.github/workflows/: build-and-deploy.yml
backend/: Pipfile  RESTART_SERVER.md  find_failing_app.py  requirements.txt
backend/common/: admin.py  apps.py  audit.py  auth_resources.py  contribution_apply.py  contributions.py  csv_import.py  filters.py  images.py  middleware.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/postmarks/: admin.py  apps.py  models.py
common/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
docs/: BUILD.md  CONTRIBUTION_MODERATION.md  DAILY_UPDATE_2025-02-14.md  DEPLOY.md  Design and Implementation of the WorldCovers System.md  RUNBOOK.md  TOOLS.md  WorldCovers User Stories.md  acknowledgements.md  api_versioning_and_migration.md  data_model-v1.erd  dateformat_csv_import.md  design.md  faq.md  glossary.md  import_legacy_csv.md  model.md  scope.md  vision.md
frontend/: .env.example  .env.production  CATALOG_SUBMISSIONS_MISMATCH.md  CREATE_TEST_USER.md  README.md  babel.config.cjs  bun.lockb  create_test_user.sql  index.html  jest.config.cjs  package-lock.json  package.json  postcss.config.js  sync_approved_submissions.sql  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
help-docs/: vision.md
postman/: worldcovers-local.postman_environment.json  worldcovers-v2.postman_collection.json
scripts/: deploy.sh  rebuild_staging_db.sh  setup_worldcovers_db.sql
tools/: apmc_data_explorer.ipynb  apmc_data_munger.ipynb  apmc_data_munger.py  apmc_data_transforms.ipynb  apmc_data_transforms_lite.ipynb  apmc_page_check.ipynb  apmc_page_extract.ipynb  apmc_page_split.ipynb  apmc_source_data_explorer.ipynb  ascc_data_munger.py  ascc_image_extract.py  ascc_page_extract.py  ascc_page_processor.py  deploy.sh  export_azure_sql_to_csv.py  fingerprint.sh  fresh_migrate.md  halfpage_image_cutter.ipynb  push_data.sh  rebuild_staging_db.sh  reload_data.sh  schema_diff.py  split_catalog_pdf.py  wipe_user_data.sh  worldcovers.service
woco/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+348 files in other folders)
