[project]
name = "worldcovers"
version = "0.0.0"
requires-python = "==3.13.*"
dependencies = [
    "asgiref==3.10.0",
    "astroid==3.3.11",
    "attrs==25.4.0",
    "build==1.3.0",
    "click==8.3.0",
    "diff-match-patch==20241021",
    "dill==0.4.0",
    "django==5.2.7",
    "django-admin-logs==1.4.0",
    "django-allauth==65.13.0",
    "django-colorfield==0.14.0",
    "django-cors-headers==4.9.0",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-import-export==4.3.14",
    "django-reversion",
    "django-reversion-compare",
    "django-types==0.22.0",
    "djangorestframework==3.16.1",
    "dotenv-cli==3.4.1",
    "drf-spectacular==0.29.0",
    "gunicorn==21.2.0",
    "inflection==0.5.1",
    "isort==6.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "mccabe==0.7.0",
    "mysqlclient==2.2.7",
    "packaging==25.0",
    "pandas",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "pylint==3.3.9",
    "pylint-django==2.6.1",
    "pylint-plugin-utils==0.9.0",
    "pyproject-hooks==1.2.0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "rpds-py==0.28.0",
    "sqlparse==0.5.3",
    "tablib==3.9.0",
    "tomlkit==0.13.3",
    "types-psycopg2==2.9.21.20251012",
    "uritemplate==4.2.0",
]

[project.scripts]
# Installed into .venv/bin/ when uv builds the project. Lets you run
# 'woco runserver' inside the venv (after 'source .venv/bin/activate',
# or via 'uv run woco runserver' without activation). The bash shim at
# ./woco wraps this so it works from a cold shell too.
woco = "woco_cli:main"

[build-system]
# Required so the project is installable, which is required for the
# console script above to land in .venv/bin/.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only ship the CLI shim. backend/ stays on PYTHONPATH at runtime via
# woco_cli.py and is not packaged.
include = ["woco_cli.py"]

[dependency-groups]
# PEP 735 dev group. Installed locally by default with 'uv sync';
# excluded on the server with 'uv sync --no-dev'.
dev = [
    "anthropic",
    "ipykernel",
    "jinja2",
    "numpy",
    "openai",
]
